[gd_scene load_steps=16 format=2]

[ext_resource path="res://tabletop.png" type="Texture" id=1]
[ext_resource path="res://cargo.png" type="Texture" id=2]
[ext_resource path="res://Force.tres" type="Theme" id=3]
[ext_resource path="res://ForceScript.gd" type="Script" id=4]
[ext_resource path="res://SLider.png" type="Texture" id=5]
[ext_resource path="res://Text.tres" type="Theme" id=6]
[ext_resource path="res://tablebottom.png" type="Texture" id=7]
[ext_resource path="res://SeekPng.com_goatee-png_9703070.png" type="Texture" id=8]
[ext_resource path="res://Background.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.7401, 4.60658 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 79.5, 74 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 141, 484, 47, 44 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 188, 484, 47, 44 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 235, 484, 47, 44 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Force" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 9 )]

[node name="Tablebottom2" type="Sprite" parent="."]
position = Vector2( 256, 536 )
rotation = 1.5708
scale = Vector2( 3.64545, 7.50827 )
texture = ExtResource( 7 )

[node name="Tablebottom" type="Sprite" parent="."]
position = Vector2( 736, 536 )
rotation = 1.5708
scale = Vector2( 3.64545, 7.50827 )
texture = ExtResource( 7 )

[node name="SLider2" type="Sprite" parent="."]
position = Vector2( 775, 240 )
rotation = 3.14159
scale = Vector2( 12, 6 )
texture = ExtResource( 5 )

[node name="SLider" type="Sprite" parent="."]
position = Vector2( 223, 251 )
scale = Vector2( 12, 6 )
texture = ExtResource( 5 )

[node name="TableTop" type="StaticBody2D" parent="."]
position = Vector2( -240, 15 )
scale = Vector2( 0.983077, 1.02513 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableTop"]
position = Vector2( 504.921, 453.603 )
scale = Vector2( 8, 8.04688 )
shape = SubResource( 1 )

[node name="Tabletop" type="Sprite" parent="TableTop"]
position = Vector2( 500, 403.25 )
scale = Vector2( 8, 8.04688 )
texture = ExtResource( 1 )

[node name="TableTop" type="StaticBody2D" parent="TableTop"]
position = Vector2( 512.676, 4.76837e-07 )
scale = Vector2( 0.986, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableTop/TableTop"]
position = Vector2( 499.5, 454.359 )
scale = Vector2( 8, 8.04688 )
shape = SubResource( 1 )

[node name="Tabletop" type="Sprite" parent="TableTop/TableTop"]
position = Vector2( 500, 403.25 )
scale = Vector2( 8, 8.04688 )
texture = ExtResource( 1 )

[node name="Sugar" type="RigidBody2D" parent="."]
position = Vector2( 504, 356 )

[node name="Cargo" type="Sprite" parent="Sugar"]
scale = Vector2( 5.15625, 4.75781 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sugar"]
position = Vector2( -0.5, 1 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sugar"]
position = Vector2( -150, 12 )
scale = Vector2( 3.56383, 3.77273 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Sugar"]
position = Vector2( 151, 12 )
scale = Vector2( 3.56383, 3.77273 )
frames = SubResource( 5 )
frame = 1
playing = true
flip_h = true

[node name="Mass" type="HSlider" parent="."]
margin_left = 320.0
margin_top = 25.0
margin_right = 683.0
margin_bottom = 99.0
theme = ExtResource( 3 )
min_value = 1.0
step = 10.0
value = 1.0

[node name="Velocity Right" type="HSlider" parent="."]
margin_left = 614.0
margin_top = 205.0
margin_right = 977.0
margin_bottom = 279.0
theme = ExtResource( 3 )
min_value = 200.0
max_value = 300.0
step = 10.0
value = 200.0

[node name="Velocity Left" type="HSlider" parent="."]
margin_left = 32.0
margin_top = 212.0
margin_right = 371.0
margin_bottom = 286.0
theme = ExtResource( 3 )
min_value = 200.0
max_value = 300.0
step = 10.0
value = 200.0

[node name="Label" type="Label" parent="."]
margin_left = 36.0
margin_top = 179.0
margin_right = 478.0
margin_bottom = 269.0
theme = ExtResource( 6 )
text = "LEFT VELOCITY PLACE HOLDER"

[node name="Label2" type="Label" parent="."]
margin_left = 545.0
margin_top = 179.0
margin_right = 987.0
margin_bottom = 269.0
theme = ExtResource( 6 )
text = "RIGHT VELOCITY PLACE HOLDER"

[node name="Label3" type="Label" parent="."]
margin_left = 356.0
margin_top = 7.0
margin_right = 798.0
margin_bottom = 97.0
theme = ExtResource( 6 )
text = "MASS PLACE HOLDER"

[node name="Button" type="Button" parent="."]
margin_left = 904.0
margin_top = 8.0
margin_right = 1017.0
margin_bottom = 80.0
theme = ExtResource( 6 )
text = "RESET"

[node name="Menu" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 55, 35 )
theme = ExtResource( 6 )
text = "Next"

[node name="Def" type="Button" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 118.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 55, 35 )
theme = ExtResource( 6 )
text = " Define "

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PauseMenu" type="TextEdit" parent="Popup"]
margin_left = 208.0
margin_top = 104.0
margin_right = 792.0
margin_bottom = 464.0
theme = ExtResource( 6 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = " 
 Force Defination:-

  Force is the push or pull on an object with mass which causes it to change its velocity.

 
  SI:- N (Newton)"
readonly = true
hiding_enabled = true
wrap_enabled = true

[node name="Button2" type="Button" parent="Popup"]
margin_left = 184.0
margin_top = 88.0
margin_right = 262.0
margin_bottom = 150.0
theme = ExtResource( 6 )
text = " >< "

[connection signal="value_changed" from="Mass" to="." method="_on_Mass_value_changed"]
[connection signal="value_changed" from="Mass" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Velocity Right" to="." method="_on_Velocity_Right_value_changed"]
[connection signal="value_changed" from="Velocity Right" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Velocity Left" to="." method="_on_Velocity_Left_value_changed"]
[connection signal="value_changed" from="Velocity Left" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Def" to="." method="_on_Def_pressed"]
[connection signal="popup_hide" from="Popup" to="." method="_on_Popup_popup_hide"]
[connection signal="pressed" from="Popup/Button2" to="." method="_on_Button2_pressed"]
